2003-05-28  Derek Price  <derek@ximbiot.com>

	* getline.h, md5.c, sighandle.c, savecwd.h: Use PROTO.h.
	* savecwd.c: Use standard PROTO macro.
	* Makefile.am: Add PROTO.h
	* PROTO.h: PROTO macro definition is finally here, as specified in
	Autoconf documentation.
	(Original patch from Alexey Mahotkin <alexm@hsys.msk.ru>.)

	* Makefile.in: Regenerated.

2003-05-28  Derek Price  <derek@ximbiot.com>

	* Makefile.am: get rid of $(includeopt); -Isrc/ is ok, so remove
	lengthy explanation.
	(Patch from Alexey Mahotkin <alexm@hsys.msk.ru>.)

	* Makefile.in: Regenerated.

2003-05-27  Derek Price  <derek@ximbiot.com>

	* README: New file explaining the GNULIB origin of many of the lib
	files.

2003-05-21  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerate with Automake version 1.7.5.

2003-05-21  Derek Price  <derek@ximbiot.com>

	* unlocked-io.h: New file from GNULIB.
	* system.h: Include unlocked-io.h.
	* Makefile.am (libcvs_a_SOURCES): Add unlocked-io.h.

	* Makefile.in: Regenerated.

2003-05-21  Derek Price  <derek@ximbiot.com>

	* realloc.c: New file from GNULIB.
	* system.h (HAVE_REALLOC, CVS_REALLOC): Add support for realloc.c.

2003-05-20  Derek Price  <derek@ximbiot.com>

	* stat.c: Don't compile LSTAT code unless configure detected that we
	need to be trailing-slash-safe.

2003-05-20  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerated.

2003-05-20  Derek Price  <derek@ximbiot.com>

	* system.h: Move in the standard includes from cvs.h.  Define
	CVS_MALLOC & CVS_REALLOC.

2003-05-19  Derek Price  <derek@ximbiot.com>

	* malloc.c: New file from <https://savannah.gnu.org/projects/gnulib>.

2003-05-19  Derek Price  <derek@ximbiot.com>

	* lstat.c: New file from <https://savannah.gnu.org/projects/gnulib>.
	* stat.c: Ditto.
	* system.h: Define CVS_STAT and CVS_LSTAT properly when the system
	versions of stat and lstat are broken.

2003-05-19  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Add fnmatch.h for Windows.
