@@ -78,8 +78,7 @@ libcvs_a_LIBADD = @LIBOBJS@
 EXTRA_DIST = \
 	.cvsignore \
 	ChangeLog.fsf \
-	build_lib.com \
-	xgssapi.h
+	build_lib.com
 
 # Until Automake gets its act together
 distclean-local:
